<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Jumbotron -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/blue_light"
            android:gravity="center"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_about_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:src="@drawable/about_photo" />

            <TextView
                android:id="@+id/tv_about_name"
                style="@style/AboutJumbotronText"
                android:layout_below="@+id/img_about_photo"
                android:layout_marginBottom="4dp"
                android:textSize="18sp"
                android:text="@string/about_name" />

            <TextView
                style="@style/AboutJumbotronText"
                android:layout_below="@+id/tv_about_name"
                android:textSize="12sp"
                android:text="@string/about_email" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderText"
                android:layout_marginBottom="16sp"
                android:text="@string/about_header"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/about_description"/>
        </LinearLayout>


        <Button
            android:id="@+id/btn_visit_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_regular"
            android:text="@string/about_btn_visit"/>
    </LinearLayout>
</ScrollView>