<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/img_item_logo"
        android:contentDescription="@string/lang_logo_description"
        style="@style/LangImg"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/LangDetailText"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/lang_name" />

        <TextView
            android:id="@+id/tv_item_created"
            style="@style/LangDetailText"
            android:layout_marginBottom="16dp"
            tools:text="@string/lang_created" />
    </LinearLayout>
</LinearLayout>