<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Jumbotron -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/blue_light"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_poster"
                style="@style/LangImg"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/lang_logo_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/LangDetailText"
                    android:layout_marginBottom="16dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:text="@string/lang_name" />

                <TextView
                    android:id="@+id/tv_created"
                    style="@style/LangDetailText"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/white"
                    tools:text="@string/lang_created" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_fav"
                        style="@style/ButtonGeneral"
                        tools:text="@string/button_fav" />

                    <Button
                        android:id="@+id/button_share"
                        style="@style/ButtonGeneral"
                        android:layout_marginStart="8dp"
                        android:text="@string/button_share" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- Content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="@tools:sample/lorem/random"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
